# render_context

./: CMakeLists.txt  README.md  conanfile.txt  lockfile.json
.github/workflows/: _build.yml  ci.yml  create_tag_release.yml
src/: CMakeLists.txt  context.cpp  context.h
src/matrixes/: transformation.hpp
src/primitives/: CMakeLists.txt  arc.hpp  base_polygon.hpp  image.hpp  line.cpp  line.h  line.hpp  line_element.hpp  polygon.hpp  primitive.hpp  rectangle.hpp  text.hpp
src/render/: CMakeLists.txt  context.h  imconfig.h  imgui.cpp  imgui.h  imgui_functions.cpp  imgui_functions.h
src/render/imgui/: CMakeLists.txt  context.cpp  context.h  imconfig.h  pixels.hpp
src/transformation/: CMakeLists.txt  transformation.hpp  utils.hpp
src/units/: CMakeLists.txt  degrees.hpp  milimeters.cpp  milimeters.hpp  named_unit.hpp  pixels.hpp  ratio.hpp  units.hpp
tests/: CMakeLists.txt
tests/test_primitives/: test_arc.cpp  test_image.cpp  test_line.cpp  test_polygon.cpp  test_rectangle.cpp  test_text.cpp
tests/test_render/: mock_draw_list.hpp  test_context.cpp  test_imgui_context.cpp  test_imgui_functions.cpp  test_imgui_primitives.cpp
tests/test_transformation/: test_2d_matrix.cpp  test_inverted.cpp  test_operations.cpp  test_utils.cpp
tests/test_units/: test_milimeters.cpp  test_named_unit.cpp  test_operations.cpp  test_pixels.cpp  test_ratio.cpp
